<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/crear"
            android:title="@string/menu_crear" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/eliminar"
            android:title="@string/menu_eliminar" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/informacion"
            android:title="@string/menu_creditos" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/modificar"
                android:title="@string/menu_modificar" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/listar"
                android:title="@string/menu_listar" />
        </menu>
    </item>

</menu>
